fix the overlap of credit card field (fixes #5662)
git-svn-id: file:///Users/gauthierm/svnrepo/public/store/trunk@52001 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/store-checkout-payment-method-page.css
+++ b/www/styles/store-checkout-payment-method-page.css
@@ -47,6 +47,7 @@
 #current_payments {
 	width: 48%;
 	float: left;
+	margin-right: 24px;
 }
 
 /* {{{ Multiple Payments Table */
